refactor(docs): auriaryのフォルダ分け構成をAuraTimeに適用
- フォルダ構造を再編成（000_要件定義、100_基本設計、200_詳細設計、300_開発、400_テスト、900_リリース）
- 既存ファイルを適切なフォルダに移動
- ファイル名を統一（番号付けの調整）
- @README.mdを作成して全体の目次を更新
- すべてのリンクを新しいパスに更新

これにより、ドキュメントの管理性と拡張性が向上し、auriaryと統一された構成となった。

--- a/.cursorignore
+++ b/.cursorignore
@@ -101,8 +101,8 @@ bin/
 .vscode/
 *.code-workspace
 
-# Cursor（自身の設定ファイルは除外）
-.cursor/
+# # Cursor（自身の設定ファイルは除外）
+# .cursor/
 
 # ============================================
 # OS固有ファイル（インデックス化不要）
