docs: 開発ガイドラインをフロントエンド・バックエンド別に分割
- フロントエンド開発ガイドライン（313_開発ガイドライン_フロントエンド.md）を追加
  - Next.jsのハイドレーションエラー防止ガイドラインを追加
  - 8つの原則、チェックリスト、よくある問題と対処法を記載

- バックエンド開発ガイドライン（312_開発ガイドライン_バックエンド.md）を追加
  - Spring Boot開発における包括的なガイドラインを追加
  - アーキテクチャ原則、セキュリティ、データベースアクセス、API設計、バッチ処理、監査ログ、例外処理、ログ、テスト、パフォーマンス等を記載

- 開発ガイドライン（311_開発ガイドライン.md）を更新
  - フロントエンド・バックエンド開発ガイドラインへの参照リンクを追加

--- a/.gitignore
+++ b/.gitignore
@@ -98,7 +98,9 @@ bin/
 .metadata
 
 # VS Code
-.vscode/
+# .vscode/ はチーム開発のため共有（extensions.json, settings.json, launch.json, tasks.json）
+# 個人設定は .vscode/settings.local.json など別ファイルで管理
+.vscode/settings.local.json
 *.code-workspace
 
 # Cursor
