feat(auth): 招待トークン・パスワードリセット

--- a/backend/gradle.properties
+++ b/backend/gradle.properties
@@ -1,10 +1,15 @@
 # Gradle JVM設定
 # -Xmx2048m: 最大メモリ2048MB
 # -Dfile.encoding=UTF-8: ファイルエンコーディングをUTF-8に設定
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+# -Dconsole.encoding=UTF-8: コンソールエンコーディングをUTF-8に設定（PowerShellでの文字化け対策）
+org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8 -Dconsole.encoding=UTF-8
 
 # 並列ビルドを有効化（ビルド時間の短縮）
 org.gradle.parallel=true
+
+# コンソール出力をプレーンテキストに設定（PowerShellでの文字化け対策）
+# plain: プレーンテキスト出力（色付けなし、文字化けしにくい）
+org.gradle.console=plain
 
 
 
