--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,10 @@
     "format:check": "prettier --check \"**/*.{js,jsx,ts,tsx,json,css,md}\"",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "test:output": "jest --json --outputFile=test-results.json",
+    "test:output:txt": "jest > test-results.txt 2>&1",
+    "test:output:both": "jest --json --outputFile=test-results.json > test-results.txt 2>&1"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
